# scratch-dl

./: .gitignore  README.md  explanation.md  pyproject.toml  setup.py  train.py  walkthrough.ipynb
data/: overview.ipynb
docs/resnet/: README.md  training.ipynb  walkthrough.ipynb
resnet/configs/: train.py
resnet/model/: model.py  utils.py
scratch_dl/utils/: model.py  parser.py
scratch_dl/vision/: configs.py  train_vision.py  utils.py
scratch_dl/vision/configs/: schemas.py
scratch_dl/vision/data_loaders/: classification.py  segmentation.py
scratch_dl/vision/models/: blocks.py
scratch_dl/vision/utils/: data.py  data_loading.py  loaders.py
scripts/: download_kaggle_dataset.py  setup_dataset.sh  train.py  train_resnet.sh  train_unet.sh  train_vision.sh
src/vision/: utils.py
src/vision_models.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_models.py
wandb/: latest-run
wandb/run-20250711_231601-y5qdpvpy/: run-y5qdpvpy.wandb
wandb/run-20250711_231621-boncge2f/: run-boncge2f.wandb
wandb/run-20250712_005853-is4spyvu/: run-is4spyvu.wandb
wandb/run-20250712_005927-83lnx3s3/: run-83lnx3s3.wandb
wandb/run-20250712_010116-ca21uo89/: run-ca21uo89.wandb
wandb/run-20250712_010156-wm6ko8y2/: run-wm6ko8y2.wandb
wandb/run-20250712_010533-urlpy5r4/: run-urlpy5r4.wandb
wandb/run-20250712_010558-6fqqt14z/: run-6fqqt14z.wandb
wandb/run-20250712_011700-vnm7lsr4/: run-vnm7lsr4.wandb
wandb/run-20250712_013307-2pmab152/: run-2pmab152.wandb
wandb/run-20250712_014103-wszxegp5/: run-wszxegp5.wandb
wandb/run-20250712_021327-6ygs0bwm/: run-6ygs0bwm.wandb
(+49 files in other folders)
