[project]
name = "scratch-resnet"
version = "0.1.0"
description = ""
authors = [
    {name = "davidhoruna",email = "d.huamanor@alum.up.edu.pe"}
]
readme = "README.md"
requires-python = ">=3.10.18"
dependencies = [
    "kagglehub (>=0.3.12,<0.4.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "torchviz (>=0.0.3,<0.0.4)"
]

[tool.poetry]
packages = [{include = "scratch_resnet", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
