[project]
name = "scratch-dl"
version = "0.1.0"
description = "Your scratch models!"
authors = [
    {name = "davidhoruna",email = "d.huamanor@alum.up.edu.pe"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "scratch_dl"}
]